# projectaether

./: CICD_MIGRATION_COMPLETE.md  CLAUDE.md  COMPLETED_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Deployment_Checklist.md  Dockerfile  Project Aether _ Dev Roadmap.md  Project Aether _ SRS.md  QA_Audit_Report.md  README.md  STYLE_GUIDE.md  UAT_Plan.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  run-security-scan.sh  setup-devops.sh  setup_database_schema.sh
backend/: .dockerignore  .env.development.template  .env.production.template  DATABASE_SETUP.md  Dockerfile  Dockerfile.migrate  README.md  alembic.ini  pyproject.toml  setup_database.sh  test_migrations.py  test_secret_manager.py  validate_migrations.py
backend/alembic/: env.py
backend/alembic/versions/: 8b1884919542_initial_database_schema.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  audits.py  auth.py  sites.py
backend/app/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  user.py
backend/app/services/: __init__.py  ai_service.py  external_api_service.py
backend/app/tasks/: __init__.py  crawler_tasks.py
backend/tests/: conftest.py
backend/tests/integration/api/v1/endpoints/: test_audits_api.py
backend/tests/unit/services/: test_ai_service.py
deployment-templates/: populate-secrets.sh  setup-github-secrets.sh  verify-deployment.sh
docs/: PHASE0_STEP2_COMPLETION.md  Phase0_Step3_Completion.md  Phase0_Step4_Completion.md  Phase0_Step5_Completion.md  Phase1_QA_Readiness_Report.md  Phase1_Step1_Completion.md  Phase1_Step2_Completion.md  Phase1_Step3_Completion.md  Phase1_Step4_Completion.md  Phase1_Step5_Completion.md  Phase2_QA_Audit_Report.md  Phase2_Step1_Frontend_Foundation_Completion.md  Phase2_Step2_Frontend_Architecture_Completion.md  Phase2_Step3_Component_Development_Completion.md  Phase2_Step4_TanStack_Query_Integration_Completion.md  Phase2_Step5_Testing_Framework_Completion.md  Phase3_Step1_E2E_Testing_Completion.md  Phase3_Step2_UAT_Plan_Completion.md  Phase3_Step3_Performance_Security_Automation.md  Phase3_Step4_Production_Deployment_Checklist_Completion.md  Project_Aether_SRS_Clarification_Log.md  api_contract.md  api_endpoints_guide.md  architecture.md  authentication_security.md  frontend_integration_guide.md
e2e-tests/: global.setup.ts  playwright.config.ts
frontend/: .dockerignore  .env.development  .env.production  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+36 files in other folders)
